# mouse-telemetry-pipeline

./: .gitattributes  .gitignore  LICENSE  README.md
contracts/fixtures/: README.md  validate_fixtures.py
contracts/telemetry/: README.md  api-contract.md  click.schema.json  defs.schema.json  mousemove.schema.json  session_end.schema.json  session_start.schema.json  telemetry_batch.schema.json
documents/: TRACKING.md  aim_trainer_app_architecture.md  environment_setup.md
documents/agents/: AGENTS.md  coding_rules.md  coding_rules_api.md  coding_rules_frontend.md  commit_rules.md
documents/decisions/: README.md  (+13 more)
documents/phases/: README.md
frontend/: .env.example  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
ingestion-api/: .env.example  pyproject.toml
ingestion-api/app/: __init__.py  main.py
ingestion-api/app/api/: __init__.py  errors.py  router.py
ingestion-api/app/api/routes/: __init__.py  events.py  health.py  sessions.py
ingestion-api/app/core/: __init__.py  config.py
ingestion-api/app/schemas/: __init__.py  errors.py  sessions.py  telemetry.py
ingestion-api/app/services/: __init__.py  idempotency.py  session_store.py  telemetry_producer.py
ingestion-api/tests/: test_api_contracts.py  test_config.py  test_error_mapping.py  test_events_batch_route.py  test_health.py  test_idempotency.py  test_kafka_producer.py  test_sessions_routes.py  test_smoke.py  test_telemetry_schemas.py
ingestion-api/tests/support/: contracts.py
(+109 files in other folders)
