[project]
name = "mouse-telemetry-ingestion-api"
version = "0.1.0"
description = "FastAPI ingestion API for the mouse telemetry pipeline."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116.0",
  "orjson>=3.11.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.17.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
